# project_name_my

./: .env.example  .gitignore  README.md  crewai.yaml  pyproject.toml  requirements.txt
data/: README.md  sample_sales_data.csv
docs/: PROJECT_OVERVIEW.md  SETUP_AND_USAGE.md
notebooks/: README.md  numerical_summary_simulation.ipynb
reports/: sample_healthcare_ai_report.md
src/: __init__.py  numpy_stats.py  pure_python_stats.py  simulation.py
src/ai_research_crew/: __init__.py  crew.py  main.py
src/ai_research_crew/config/: agents.yaml  settings.py  tasks.yaml
src/ai_research_crew/tools/: __init__.py  llm_healthcheck.py
src/utils/: __init__.py  plotting_helpers.py
tests/: __init__.py  test_config_loading.py  test_crewai_wiring.py
